# Explainable_logical_fallacies_classification_in_Russian_texts

./: README.md  check_scripts.sh  pyproject.toml  requirements.txt
code/: README.md  classPredictor.py  main.py  mtlPredictor.py  optuna_tuning.py  train_binary_classifier.py  train_contrastive.py  tweet_preprocessing.py  utils.py
code/data_generation/: README.md  data_generation.py  generate_neutral_examples.py  neutralize_examples.py  translate_data_with_gpt.py
code/data_generation/prompts_for_contrastive_pairs/: ad_hominem.json  ad_populum.json  appeal_to_emotion.json  circular_reasoning.json  equivocation.json  fallacy_of_credibility.json  fallacy_of_extension.json  fallacy_of_relevance.json  false_causality.json  false_dilemma.json  faulty_generalization.json  intentional.json  random_neutral.json
code/data_generation/prompts_for_data_generation/: ad_hominem  ad_populum  appeal_to_emotion  circular_reasoning  equivocation.txt  equivocation_short.txt  fallacy_of_credibility  fallacy_of_extension.txt  fallacy_of_relevance.txt  false_causality  false_dilemma  faulty_generalization  intentional.txt
code/experiments/: README.md  few-shot.py
code/experiments/launch_scripts/: few-shot.sh  prediction.sh  pretrain_encoder_contrastive.sh  test.sh  train.sh  train_USER-bge.sh  train_binary.sh  train_roberta_large.sh  (+2 more)
data/: test_en_predictions.csv  test_ru.tsv  test_ru_predictions.csv
data/binary_detection_data/: extra_fallacies.json  extra_neutrals.json
data/multiclass_TACEI_data/: test_en.tsv  test_en.txt  train_en.tsv  validate_en.tsv  validate_ru.tsv
