[project]
name = "tacei"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "emoji==0.6.0",
    "HTMLParser==0.0.2",
    "nltk==3.5",
    "numpy==1.21.5",
    "pandas==1.1.5",
    "scikit_learn==1.1.1",
    "torch==2.6.0",
    "transformers>=4.46,<5",
    "sentencepiece",
    "setuptools<81",
    "wandb>=0.25.1",
    "optuna>=4.8.0",
]
[tool.black]
line-length = 100
