[project]
name = "tacei"
version = "0.1.0"
description = "Explainable logical fallacies classification in Russian texts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML stack
    "torch==2.6.0",
    "transformers>=4.46,<5",
    "sentence-transformers>=3.0",
    "datasets>=2.14.0",
    "accelerate>=0.20.0",
    "sentencepiece",
    # Scientific / data
    "numpy>=1.26,<2.2",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    # Tuning & tracking
    "optuna>=4.8.0",
    "wandb>=0.25.1",
    # API clients (data generation, few-shot, translation)
    "openai>=2.0",
    "deepl>=1.16.0",
    # Utilities
    "tqdm>=4.65.0",
    "emoji==0.6.0",
    "nltk==3.5",
    "setuptools<81",
]

[tool.black]
line-length = 100